@@ -1,3 +1,6 @@
+3 October 2012: Wouter
+	- fix text in unbound-anchor man page.
+
 1 October 2012: Wouter
 	- ignore trusted-keys globs that have no files (from Paul Wouters).
 
